k8s/service.yml
apiVersion: v1
kind: Service
metadata:
    name: extractor-service
spec:
    selector:
        app: extractor
    ports:
        - protocol: TCP
          port: 80 # External port
          targetPort: 8080 # Internal port
    type: LoadBalancer
