k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: extractor-ingress
    annotations:
        nginx.ingress.kubernetes.io/rewrite-target: /
spec:
    rules:
        - host: extractor.example.com
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: extractor-service
                            port:
                                number: 80
